[package]
name = "eth2_testnet_config"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
reqwest = "0.10.4"

[dev-dependencies]
tempdir = "0.3.7"
reqwest = { version = "0.10.4", features = ["blocking"] }

[dependencies]
serde = "1.0.106"
serde_yaml = "0.8.11"
types = { path = "../../types"}
eth2-libp2p = { path = "../../../beacon_node/eth2-libp2p"}
eth2_ssz = "0.1.2"
