[package]
name = "hashmap_delay"
version = "0.2.0"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"

[dependencies]
tokio-timer = "0.2.12"
futures = "0.1.29"

[dev-dependencies]
tokio = "0.1.22"
libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "71cf486b4d992862f5a05f9f4ef5e5c1631f4add" }
